# python-i2c-stcc4

./: CHANGELOG.md  README.md  metadata.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish.yml  build-docs.yml
docs/: api.rst  conf.py  execute-measurements.rst  index.rst  installation.rst  run-tests.rst
examples/: example_usage_linux_stcc4.py  example_usage_sensorbridge_stcc4.py  example_usage_single_shot_linux_stcc4.py  example_usage_single_shot_sensorbridge_stcc4.py
sensirion_i2c_stcc4/: __init__.py  commands.py  device.py  response_provider.py  result_types.py  version.py
tests/: conftest.py  test_stcc4.py
