[build-system]
requires = ["hatchling >= 1.26", "wheel >= 0.45.0"]
build-backend = "hatchling.build"

[project]
name = "sensirion_i2c_stcc4"
description = "I2C driver for the Sensirion STCC4 sensor family"

readme = "README.md"
version =  "1.1.0"
requires-python = ">=3.8,<4.0"

authors = [
    { name = "Sensirion", email = "info@sensirion.com" },
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

keywords = [
    "Sensirion STCC4",
    "I2C",
    "STCC4",
    ]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "sensirion-driver-adapters>=2.3.0,<3.0",
    "sensirion-driver-support-types>=1.2.0,<2.0",
    "sensirion-i2c-driver>=1.0,<2.0",
    "sensirion-shdlc-sensorbridge>=0.1.0,<2.0"
    ]

[project.optional-dependencies]

docs=[
    "jinja2~=3.1.6",
    "sphinx-rtd-theme==3.0.2",
    "sphinx==8.2.3",
    "lazy-object-proxy ~=1.7.1",
    "sphinx-autoapi~=3.0.0",
]

test= [
    "flake8>=7.1.0",
    "mock~=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "mypy~=1.13.0",
    "setuptools>=73.2.0"
]

[project.urls]
Changelog = "https://github.com/Sensirion/python-i2c-stcc4/blob/master/CHANGELOG.md"
Repository = "https://github.com/Sensirion/python-i2c-stcc4"
Documentation = "https://sensirion.github.io/python-i2c-stcc4"

